add github user's repos page and comment feature

--- a/Keynetic/src/AppBundle/Resources/views/default/index.html.twig
+++ b/Keynetic/src/AppBundle/Resources/views/default/index.html.twig
@@ -19,7 +19,7 @@
         <ul>
             {% for user in results.users %}
                 <li>
-                    {{ user.username }}
+                    <a href="{{ path('comment', { 'username' : user.username }) }}">{{ user.username }}</a>
                 </li>
             {% endfor %}
         </ul>
